fixed overflow issue

--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -1,6 +1,3 @@
-.entry-card p {
-}
-
 h3 {
   font-size: 0.8rem;
   text-transform: uppercase;
