--- a/src/components/EntryList/EntryList.css
+++ b/src/components/EntryList/EntryList.css
@@ -11,7 +11,7 @@
   justify-content: center;
   background-color: #f9ffeb;
   width: 200px;
-  height: 100px;
+  min-height: 100px;
   border-radius: 3px;
   border: 1px solid #ff8d85;
   align-items: center;
